# rust-jc2-tools

./: .gitignore  Cargo.toml
.cargo/: config.toml
app/: Cargo.toml
app/assets/shaders/: general_material.wgsl
app/src/: camera.rs  main.rs
app/src/debug/: mod.rs  wireframe.rs
app/src/interface/: file_tree.rs  mod.rs  title_bar.rs
app/src/render_block/: mod.rs
app/src/render_block/materials/: general.rs  mod.rs
app/src/utilities/: content.rs  mod.rs  model.rs  settings.rs  streaming.rs
assets/archives_win32/: pc0.filelist  pc1.filelist  pc2.filelist  pc3.filelist  pc4.filelist
assets/dlc/: pc_00.filelist  pc_10.filelist  pc_100.filelist  pc_110.filelist  pc_120.filelist  pc_130.filelist  pc_140.filelist  pc_150.filelist  pc_160.filelist  pc_170.filelist  pc_180.filelist  pc_190.filelist  pc_20.filelist  pc_30.filelist  pc_40.filelist  pc_50.filelist  pc_60.filelist  pc_70.filelist  pc_80.filelist  pc_90.filelist
crates/bevy_jc2_file_system/: Cargo.toml
crates/bevy_jc2_file_system/src/: archive.rs  asset_reader.rs  file_list.rs  lib.rs  tree.rs
crates/bevy_jc2_render_block/: Cargo.toml
crates/bevy_jc2_render_block/src/: lib.rs
crates/bevy_jc2_render_block/src/assets/shaders/: general_material.wgsl
crates/bevy_jc2_render_block/src/materials/: general.rs  mod.rs
crates/file_formats/: Cargo.toml
crates/file_formats/src/: lib.rs
crates/file_formats/src/math/: mod.rs  vec2.rs  vec3.rs  vec4.rs
crates/file_formats/src/render_block_model/: mod.rs  render_block.rs
crates/file_formats/src/render_block_model/common/: deform_table.rs  material.rs  mod.rs  packed.rs  skin_batch.rs  vertex_info.rs
crates/file_formats/src/render_block_model/render_block/: billboard_foliage.rs  car_paint.rs  car_paint_simple.rs  general.rs  lambert.rs  mod.rs  skinned_general.rs  vegetation_foliage.rs  window.rs
crates/file_formats/src/render_block_model/vertex_format/: buffers.rs  deformable.rs  general.rs  generic.rs  halo.rs  helpers.rs  mod.rs  simple.rs  skinned.rs  vegetation.rs
crates/godot_jc2/: Cargo.toml
crates/godot_jc2/src/: lib.rs  property_container.rs
crates/godot_jc2/src/resource_loader/: mesh_builder.rs  mod.rs  model.rs  terrain.rs  texture.rs
crates/godot_jc2/src/resource_loader/formats/: location.rs  lod.rs  mod.rs  model.rs  model_collection.rs  properties.rs  terrain.rs  texture.rs
crates/godot_utils/: Cargo.toml
crates/godot_utils/src/: lib.rs  mesh_builder.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: hash_string.rs  hash_string_macros.rs  lib.rs
crates/jc2_file_formats/: Cargo.toml
crates/jc2_file_formats/src/: lib.rs
crates/jc2_file_formats/src/archive/: mod.rs
crates/jc2_file_formats/src/common/: mod.rs  null_string.rs
crates/jc2_file_formats/src/common/length/: bitvec.rs  mod.rs  string.rs  vec.rs
crates/jc2_file_formats/src/length/: mod.rs  string.rs  vec.rs
crates/jc2_file_formats/src/math/: ops.rs  vec2.rs  vec3.rs  vec4.rs
crates/jc2_file_formats/src/model_collection/: mod.rs
crates/jc2_file_formats/src/property_container/: mod.rs  property_block_file.rs  property_container.rs  property_file.rs
crates/jc2_file_formats/src/render_block_model/: mod.rs
crates/jc2_file_formats/src/render_block_model/common/: deform_table.rs  material.rs  mod.rs  packed.rs  skin_batch.rs  vertex_info.rs
crates/jc2_file_formats/src/render_block_model/render_block/: billboard_foliage.rs  car_paint.rs  car_paint_simple.rs  deformable_window.rs  facade.rs  general.rs  halo.rs  lambert.rs  mod.rs  skinned_general.rs  vegetation_bark.rs  vegetation_foliage.rs  window.rs
crates/jc2_file_formats/src/render_block_model/vertex_format/: billboard_foliage.rs  buffers.rs  deformable.rs  facade.rs  general.rs  generic.rs  halo.rs  simple.rs  skinned.rs  vegetation.rs
crates/jc2_file_formats/src/string/: length_string.rs  mod.rs
crates/jc2_file_formats/src/terrain/: mod.rs
crates/jc2_file_formats/src/vec/: length_vec.rs  mod.rs
crates/jc2_hashing/: Cargo.toml
crates/jc2_hashing/src/: hash_list.rs  hash_string.rs  lib.rs  little32.rs
src/: main.rs
src/debug/: wireframe.rs
tools/gltf_converter/: Cargo.toml
tools/gltf_converter/src/: main.rs
tools/gltf_converter/src/helpers/: billboard_foliage.rs  deformable.rs  facade.rs  general.rs  halo.rs  mod.rs  simple.rs  skinned.rs  vegetation.rs
tools/hash_tool/: Cargo.toml
tools/hash_tool/src/: main.rs
tools/property_container/: Cargo.toml
tools/property_container/src/: main.rs
tools/stream_archive/: Cargo.toml
tools/stream_archive/src/: main.rs
tools/terrain/src/: main.rs
tools/terrain_tool/: Cargo.toml
tools/terrain_tool/src/: main.rs
