[workspace]
default-members = ["crates/*", "app", "tools/*"]
members = ["crates/*", "app", "tools/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
binrw = "0.13"
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["must_cast"] }
num-traits = "0.2"
paste = "1.0"
static_assertions = "1.1"
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
