[workspace]
resolver = "2"
members = [
    "app",
    "crates/*",
    "tools/*",
]

[workspace.package]
authors = ["SK83RJOSH"]
edition = "2021"
homepage = "https://github.com/SK83RJOSH/rust-jc2-tools/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SK83RJOSH/rust-jc2-tools/"
rust-version = "1.77"
version = "0.1.0"

[workspace.dependencies]
binrw = "0.13"
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["must_cast"] }
num-traits = "0.2"
paste = "1.0"
static_assertions = "1.1"
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
