[package]
name = "jc2_tools"
authors.workspace = true
description = "Just Cause 2 Editor"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/embedded_watcher",
    "bevy/file_watcher",
]

[lints]
workspace = true

[dependencies]
bevy_jc2_file_system = { workspace = true, features = ["tree"] }
bevy_jc2_render_block.workspace = true

bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_winit",
    "default_font",
    "multi-threaded",
    "tonemapping_luts",
    "webgpu",
    "x11",
    "dds",
] }
bevy_egui.workspace = true
bevy_file_dialog.workspace = true
bevy_panorbit_camera.workspace = true
bevy_save.workspace = true
binrw.workspace = true
itertools.workspace = true
thiserror.workspace = true