[package]
name = "bevy_jc2_file_system"
authors.workspace = true
description = "Bevy Plugin for mounting content from Just Cause 2"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
jc2_file_formats.workspace = true
jc2_hashing.workspace = true

bevy = { workspace = true, features = [
  "bevy_asset",
] }
binrw.workspace = true
futures-io.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
