[package]
name = "godot_jc2"
authors.workspace = true
description = "Godot Plugin for mounting content from Just Cause 2"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
jc2_file_formats.workspace = true
jc2_hashing.workspace = true

async-channel.workspace = true
binrw.workspace = true
bytemuck.workspace = true
godot.workspace = true
thiserror.workspace = true

