
[package]
name = "godot_utils"
authors.workspace = true
description = "Utilities for working with godot"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
godot.workspace = true
