[package]
name = "jc2_file_formats"
authors.workspace = true
description = "Just Cause 2 Hashing Utilities"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
jc2_hashing.workspace = true

binrw.workspace = true
bitflags.workspace = true
bitvec.workspace = true
bytemuck.workspace = true
flate2.workspace = true
num-traits.workspace = true
thiserror.workspace = true
