[package]
name = "gltf_converter"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
jc2_file_formats = { path = "../../crates/file_formats" }

thiserror = { workspace = true }

anyhow = { version = "1.0" } 
clap = { version = "4.4", features = ["derive"] }
gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "dd6f483" }
gltf-json = { git = "https://github.com/gltf-rs/gltf.git", rev = "dd6f483" }
image = { version = "0.25", default-features = false }
itertools = { version = "0.12" }
rgb = { version = "0.8" }
texpresso = { version = "2.0" }
