[package]
name = "hash_tool"
authors.workspace = true
description = "Just Cause 2 Hash Tool"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jc2_hashing.workspace = true

anyhow.workspace = true
clap.workspace = true
